<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/actmain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#505050"
    tools:context="com.daeeun.sohnori.anythingmanager.MainActivity" >

    <LinearLayout   		    	
	    	android:orientation="vertical"	    	
	    	android:layout_width="match_parent"
	    	android:layout_height="wrap_content"	    	
	    	android:baselineAligned="true"
	    	 >
		   
		    <Button
		        android:id="@+id/btnProcess1"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/app_name1"
		        android:textSize="30sp"
		        android:textColor="#ffffffff"
		        android:gravity="center"
		        android:onClick="mOnClick"
		        />
		    <Button
		        android:id="@+id/btnProcess2"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/app_name2"
		        android:textSize="30sp"
		        android:textColor="#ff808080"
		        android:gravity="center"
		        android:onClick="mOnClick"
		        />
		    <Button
		        android:id="@+id/btnProcess3"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/app_name3"
		         android:textSize="30sp"
		        android:textColor="#ff0f0f0f"
		        android:gravity="center"
		        android:onClick="mOnClick"
		        />
		    <Button
		        android:id="@+id/btnProcess4"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/app_name4"
		        android:textSize="30sp"
		        android:textColor="#a0ff0000"
		        android:gravity="center"
		        android:onClick="mOnClick"
		        />
		    <Button
		        android:id="@+id/btnProcess5"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/app_name5"
		        android:textSize="30sp"
		        android:textColor="#a000ff00"
		        android:gravity="center"
		        android:onClick="mOnClick"
		        />
		    <Button
		        android:id="@+id/btnProcess6"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/app_name6"
		        android:textSize="30sp"
		        android:textColor="#a00000ff"
		        android:gravity="center"
		        android:onClick="mOnClick"		        
		        />
		    <Button
		        android:id="@+id/btnProcess7"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/app_name7"
		        android:textSize="30sp"
		        android:textColor="#a0111111"
		        android:gravity="center"
		        android:onClick="mOnClick"
		        />
		    <Button
		        android:id="@+id/btnProcess8"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/app_name8"
		        android:textSize="30sp"
		        android:textColor="#a0222222"
		        android:gravity="center"
		        android:onClick="mOnClick"		        
		        />
		    <Button
		        android:id="@+id/btnProcess9"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/app_name9"
		        android:textSize="30sp"
		        android:textColor="#a0333333"
		        android:gravity="center"
		        android:onClick="mOnClick"
		        />
		    <Button
		        android:id="@+id/btnProcess10"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/app_name10"
		        android:textSize="30sp"
		        android:textColor="#a0333333"
		        android:gravity="center"
		        android:onClick="mOnClick"
		        />
		    <Button
		        android:id="@+id/btnProcess11"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/app_name11"
		        android:textSize="30sp"
		        android:textColor="#a0333333"
		        android:gravity="center"
		        android:onClick="mOnClick"
		        />
		    <Button
		        android:id="@+id/btnProcess12"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/app_name12"
		        android:textSize="30sp"
		        android:textColor="#a0333333"
		        android:gravity="center"
		        android:onClick="mOnClick"
		        />
		    <Button
		        android:id="@+id/btnProcess13"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/app_name13"
		        android:textSize="30sp"
		        android:textColor="#a0333333"
		        android:gravity="center"
		        android:onClick="mOnClick"
		        />
		    <Button
		        android:id="@+id/btnProcess14"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/app_name14"
		        android:textSize="30sp"
		        android:textColor="#a0333333"
		        android:gravity="center"
		        android:onClick="mOnClick"
		        />
		    <Button
		        android:id="@+id/btnProcess15"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/app_name15"
		        android:textSize="30sp"
		        android:textColor="#a0333333"
		        android:gravity="center"
		        android:onClick="mOnClick"
		        />
		    <Button
		        android:id="@+id/btnProcess16"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/app_name16"
		        android:textSize="30sp"
		        android:textColor="#a0333333"
		        android:gravity="center"
		        android:onClick="mOnClick"
		        />
		    	  
	</LinearLayout>

</ScrollView>
