<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5pt"
    >
    <LinearLayout        
        android:orientation="horizontal"
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"    	
        >

        <TextView
            android:layout_width="@dimen/act1_dlgtxt_width"
            android:layout_height="wrap_content"
            android:text="@string/str_terminaldev"
            android:gravity="end" 
            />
        <Spinner
            android:id="@+id/act1spindev"
            android:layout_width="@dimen/act1_dlgspin_width"
            android:layout_height="wrap_content"             
            />

    </LinearLayout>
    <LinearLayout        
        android:orientation="horizontal"
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"    	
        >
        <TextView            
            android:layout_width="@dimen/act1_dlgtxt_width"
    		android:layout_height="wrap_content"
    		android:text="@string/str_terminalbr"
    		android:gravity="end" 
            />
        <Spinner 
            android:id="@+id/act1spinbr"
	        android:layout_width="@dimen/act1_dlgspin_width"
	        android:layout_height="wrap_content"
            />
    </LinearLayout>
    <LinearLayout        
        android:orientation="horizontal"
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"    	
        >
        <TextView            
            android:layout_width="@dimen/act1_dlgtxt_width"
    		android:layout_height="wrap_content"
    		android:text="@string/str_terminaldata"
    		android:gravity="end" 
            />
        <Spinner 
            android:id="@+id/act1spindata"
	        android:layout_width="@dimen/act1_dlgspin_width"
	        android:layout_height="wrap_content"
            />
    </LinearLayout>
    <LinearLayout        
        android:orientation="horizontal"
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"    	
        >
        <TextView            
            android:layout_width="@dimen/act1_dlgtxt_width"
    		android:layout_height="wrap_content"
    		android:text="@string/str_terminalparity"
    		android:gravity="end" 
            />
        <Spinner 
            android:id="@+id/act1spinparity"
	        android:layout_width="@dimen/act1_dlgspin_width"
	        android:layout_height="wrap_content"
            />
    </LinearLayout>
    <LinearLayout        
        android:orientation="horizontal"
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"    	
        >
        <TextView            
            android:layout_width="@dimen/act1_dlgtxt_width"
    		android:layout_height="wrap_content"
    		android:text="@string/str_terminalstop"
    		android:gravity="end" 
            />
        <Spinner 
            android:id="@+id/act1spinstop"
	        android:layout_width="@dimen/act1_dlgspin_width"
	        android:layout_height="wrap_content"
            />
    </LinearLayout>
    <LinearLayout        
        android:orientation="horizontal"
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"    	
        >
        <TextView            
            android:layout_width="@dimen/act1_dlgtxt_width"
    		android:layout_height="wrap_content"
    		android:text="@string/str_terminalflow"
    		android:gravity="end" 
            />
        <Spinner 
            android:id="@+id/act1spinflow"
	        android:layout_width="@dimen/act1_dlgspin_width"
	        android:layout_height="wrap_content"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="@dimen/act1_dlgtxt_width"
            android:layout_height="wrap_content"
            android:text="@string/str_terminaltimeout"
            android:gravity="end" 
            />

        <Spinner
            android:id="@+id/act1spintimeout"
            android:layout_width="@dimen/act1_dlgspin_width"
            android:layout_height="wrap_content" />
    </LinearLayout>
    
</LinearLayout>
    