<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/actp1"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#505050"
    android:focusable="true"
    android:focusableInTouchMode="true"    
    tools:context="com.daeeun.sohnori.anythingmanager.MyProcess1Activity" >
           
    <LinearLayout 
        android:orientation="horizontal"
   	 	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
        >
        <TextView 	        
		     android:layout_width="wrap_content" 
		     android:layout_height="wrap_content" 
		     android:text="터미널: " 
		     android:textSize="@dimen/act1txtsize"
		     android:textColor="#00ff00"             
	     	/>

        <Button
            android:id="@+id/act1btnterminal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="mOnClick"
            android:text="연결하시오." />
	    
    </LinearLayout>
    <Space android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="10dp"/>    
    
    <GridLayout
        android:layout_width="match_parent"
       	android:layout_height="wrap_content"
       	android:columnCount="2"       	
        >
        <TextView
            android:id="@+id/act1txtbr"             	        
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:text="@string/str_terminalbr" 
			android:textSize="@dimen/act1txtsize2"
			android:paddingStart="10dp"
			android:paddingEnd="30dp"		                
	     	/>
        <TextView
            android:id="@+id/act1txtdata"  	        
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:text="@string/str_terminaldata" 
			android:textSize="@dimen/act1txtsize2"
			android:paddingStart="10dp"
			android:paddingEnd="30dp"				               
			/>
        <TextView
            android:id="@+id/act1txtparity"  	        
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:text="@string/str_terminalparity" 
			android:textSize="@dimen/act1txtsize2"
			android:paddingStart="10dp"
			android:paddingEnd="30dp"		                
			/>
        <TextView
            android:id="@+id/act1txtstop"  	        
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:text="@string/str_terminalstop" 
			android:textSize="@dimen/act1txtsize2"
			android:paddingStart="10dp"
			android:paddingEnd="30dp"		                
			/>
        <TextView
            android:id="@+id/act1txtflow"  	        
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:text="@string/str_terminalflow" 
			android:textSize="@dimen/act1txtsize2"
			android:paddingStart="10dp"
			android:paddingEnd="30dp"		                
			/>
        <TextView
            android:id="@+id/act1txttimeout"  	        
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:text="@string/str_terminaltimeout" 
			android:textSize="@dimen/act1txtsize2"
			android:paddingStart="10dp"
			android:paddingEnd="30dp"		                
			/>
    </GridLayout>
    <Space android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="10dp"/>
    <GridLayout 
		android:layout_width="match_parent"
       	android:layout_height="wrap_content"
       	android:columnCount="5"                
        >
        <Button
            android:id="@+id/act1btn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="mOnClick"
            android:text="1"
            />
        <Button
            android:id="@+id/act1btn2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="mOnClick"
            android:text="2"
            />
        <Button
            android:id="@+id/act1btn3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="mOnClick"
            android:text="3"
            />
        <Button
            android:id="@+id/act1btn4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="mOnClick"
            android:text="4"
            />
        <Button
            android:id="@+id/act1btn5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="mOnClick"
            android:text="5"
            />
        <Button
            android:id="@+id/act1btn6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="mOnClick"
            android:text="6"
            />
        <Button
            android:id="@+id/act1btn7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="mOnClick"
            android:text="저장"
            />
        <Button
            android:id="@+id/act1btn8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="mOnClick"
            android:text="삭제"
            />
        <Button
            android:id="@+id/act1btninfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="mOnClick"
            android:text="정보"
            />
        <Button
            android:id="@+id/act1btnequipset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="mOnClick"
            android:text="설정"
            />
    </GridLayout>
    <Space android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="10dp"/>
    <GridLayout
        android:layout_width="match_parent"
       	android:layout_height="wrap_content"
       	android:columnCount="2"       	
        >
        <TextView
            android:id="@+id/act1txtequiptype"             	        
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:text="@string/str_equiptype" 
			android:textSize="@dimen/act1txtsize2"
			android:paddingStart="10dp"
			android:paddingEnd="30dp"		                
	     	/>
        <TextView
            android:id="@+id/act1txtequip"  	        
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:text="@string/str_equip" 
			android:textSize="@dimen/act1txtsize2"
			android:paddingStart="10dp"
			android:paddingEnd="30dp"				               
			/>
        <TextView
            android:id="@+id/act1txtequipmodel"  	        
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:text="@string/str_equipmodel" 
			android:textSize="@dimen/act1txtsize2"
			android:paddingStart="10dp"
			android:paddingEnd="30dp"		                
			/>
        <TextView
            android:id="@+id/act1txtequipid"  	        
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:text="@string/str_equipid" 
			android:textSize="@dimen/act1txtsize2"
			android:paddingStart="10dp"
			android:paddingEnd="30dp"		                
			/>                
    </GridLayout>        
    <Space android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="10dp"/>
    <ScrollView
        android:id="@+id/act1scrv2"     
        android:orientation="vertical"
   	 	android:layout_width="match_parent"
    	android:layout_height="80dp"    	
        >
        <LinearLayout 
	        android:orientation="vertical"
	   	 	android:layout_width="match_parent"
	    	android:layout_height="wrap_content"
        	>        
        <EditText 
			android:id="@+id/act1editresult"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"						
			android:enabled="false"
			android:hint="결과창입니다."
			android:singleLine="false"				        	     
			android:background="#ffffff"
			android:ems="10"						            
		/>
        </LinearLayout>
    </ScrollView>              	            
    <Space android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="10dp"/>    	       
    <ScrollView
        android:id="@+id/act1scrv"     
        android:orientation="vertical"
   	 	android:layout_width="match_parent"
    	android:layout_height="match_parent"    	
        >
        <LinearLayout 
	        android:orientation="vertical"
	   	 	android:layout_width="match_parent"
	    	android:layout_height="wrap_content"
        	>        
        <EditText 
			android:id="@+id/act1editlog"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"			
			android:enabled="false"
			android:hint="로그창입니다."
			android:singleLine="false"			        	    
			android:background="#ffffff"
			android:ems="10"				              
	     	/>
        </LinearLayout>
    </ScrollView>            
</LinearLayout>